<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/welcome_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/welcome_text"
        android:textSize="24sp"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/main_image"
        app:layout_constraintHeight_percent="0.2"/>

    <ImageView
        android:id="@+id/main_image"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:src="@mipmap/mysplash"
        android:contentDescription="@string/image_description"
        android:scaleType="centerCrop"
        app:layout_constraintTop_toBottomOf="@+id/welcome_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/username_input"
        app:layout_constraintHeight_percent="0.4"/>

    <EditText
        android:id="@+id/username_input"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/username_hint"
        android:inputType="text"
        app:layout_constraintTop_toBottomOf="@+id/main_image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/navigate_button"
        app:layout_constraintHeight_percent="0.2"/>

    <Button
        android:id="@+id/inicio_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/boton_inicio"
        android:textColor="@android:color/white"
        app:layout_constraintTop_toBottomOf="@+id/username_input"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHeight_percent="0.2"
        android:backgroundTint="@color/green" />

    <Button
        android:id="@+id/navigate_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/boton_creditos"
        android:textColor="@android:color/white"
        app:layout_constraintTop_toBottomOf="@+id/inicio_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHeight_percent="0.2"
        android:backgroundTint="@color/green"/>

</androidx.constraintlayout.widget.ConstraintLayout>
